fix: footer on mobile devices

--- a/packages/ui-system/src/components/Logo/Logo.module.scss
+++ b/packages/ui-system/src/components/Logo/Logo.module.scss
@@ -3,9 +3,11 @@
   height: 26px;
   display: flex;
   gap: 8px;
-  // @include mobile {
-  //   width: 44px;
-  // }
+  @include mobile {
+    // width: 44px;
+    margin-bottom: 4px;
+    
+  }
 }
 
 .title {
@@ -18,8 +20,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // @include mobile {
-  //   letter-spacing: -1.08px;
-  //   display: none;
-  // }
+  @include mobile {
+    // letter-spacing: -1.08px;
+    // display: none;
+  }
 }
